Added a documentation site

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "test": "mocha -i -g @slow",
     "coverage": "NODE_ENV=development istanbul cover _mocha -- --reporter dot -i -g @slow",
     "travis": "npm test && npm run coverage && <coverage/lcov.info coveralls",
+    "generate-site": "node generate-site.js",
+    "update-examples": "node generate-site.js --update-examples",
     "prepublish": "(echo '/*!' && <LICENSE sed -e's/^/ * /' | sed -e's/\\s+$//' && echo ' */' && browserify -p bundle-collapser/plugin -e lib/Insection -s com.one.insection) > insection.js"
   },
   "repository": {
@@ -33,7 +35,9 @@
     "istanbul": "0.3.0",
     "jscs": "1.8.1",
     "jshint": "*",
+    "minimist": "1.1.1",
     "mocha": "2.1.0",
-    "unexpected": "5.8.0"
+    "unexpected": "7.0.1",
+    "unexpected-documentation-site-generator": "2.2.3"
   }
 }
